utf8proc (2.1.1-1) UNRELEASED; urgency=medium

  [ Peter Colberg ]
  * Update Vcs-* fields for move to salsa.debian.org

  [ Graham Inggs ]
  * New upstream release
  * Update upstream URLs for move to JuliaStrings
  * Refresh patches
  * Drop symbols of generated const tables, see upstream PR #100
  * Add Mo Zhou to uploaders
  * Switch to debhelper 11
  * Trim trailing whitespace from debian/changelog
  * Drop unnecessary get-orig-source target from debian/rules
  * Bump Standards-Version to 4.1.5

 -- Graham Inggs <ginggs@debian.org>  Sat, 07 Jul 2018 08:30:46 +0000

utf8proc (2.1.0-1) unstable; urgency=medium

  * New upstream release
  * Switch to unicode-data 10 (Closes: #867105)
  * Regenerate utf8proc_data.c from unicode-data 10
  * Update debian/libutf8proc2.symbols
  * Switch to debhelper 10
  * Enable all hardening flags
  * Bump Standards-Version to 4.0.0
  * Update copyright, use https

 -- Graham Inggs <ginggs@debian.org>  Sat, 08 Jul 2017 10:47:15 +0200

utf8proc (2.0.2-1) unstable; urgency=medium

  * New upstream release

 -- Peter Colberg <peter@colberg.org>  Sat, 30 Jul 2016 23:21:18 -0400

utf8proc (2.0.1-1) unstable; urgency=medium

  * New upstream release (Closes: #829236)
  * Refresh patch
  * Bump SONAME to libutf8proc2
  * Update debian/libutf8proc2.symbols
  * Update Vcs-* fields to use https
  * Enable bindnow hardening flag
  * Bump Standards-Version to 3.9.8
  * Add debian/gbp.conf for pristine-tar
  * Build depend on unicode-data >= 9.0 and << 9.1 for tests

 -- Peter Colberg <peter@colberg.org>  Sat, 16 Jul 2016 17:15:58 -0400

utf8proc (1.3.1-2) unstable; urgency=medium

  * Relax build-depends version for unicode-data.

 -- Peter Colberg <peter@colberg.org>  Fri, 06 Nov 2015 13:26:14 -0500

utf8proc (1.3.1-1) unstable; urgency=medium

  * Initial release. (Closes: #803681)

 -- Peter Colberg <peter@colberg.org>  Sun, 01 Nov 2015 13:30:40 -0500